--- a/src/components/Login.module.css
+++ b/src/components/Login.module.css
@@ -1,22 +1,22 @@
 .container{
-    width:430px;
-    height:550px;
+    width:260px;
+    min-height:300px;
     border: 5px solid rgb(217, 215, 215);
     background-color:white;
     text-align: center;
     position: absolute;
-    right:35%;
+    right:20%;
     bottom:23% ;
 }
 .container h2{
-    font-size: 2.5rem;
+    font-size: 1.2rem;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .loginbutton{
-    width:380px;
-    height:65px;
-    border-radius: 25px;
-    font-size: 2rem;
+    min-width: 150px;;
+    min-height:35px;
+    border-radius: 10px;
+    font-size: 1.2rem;
     background-color: rgb(0, 179, 255);
     color: white;
     border:none;
@@ -27,37 +27,36 @@
     background-color: rgb(0, 255, 255); 
 }
 .email{
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     display:grid;
     gap: 10px;
 }
 .email input,
 .password input{
-    width:380px;
-    height:55px;
+    min-width:120px;
+    height:30px;
     border-radius: 8px;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     color:black;
     margin: auto;
     margin-bottom: 20px;
     border: 3px solid rgb(217, 215, 215);
 }
 .password{
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     display:grid;
     gap: 10px;
 }
 .usertype{
-    width:440px;
+    width:270px;
     position: absolute;
-    right:35%;
+    right:20%;
     bottom:16%;
 }
 .usertype button{
-    margin: auto;
-    width:440px;
-    height:60px;
-    font-size: 1.6rem;
+    min-width:100%;
+    min-height:30px;
+    font-size: 1.1rem;
     border-radius: 8px;
     background-color: rgb(225, 234, 213);
 }
@@ -76,7 +75,7 @@
 .forgetpassword{
     border:none;
     text-decoration: underline;
-    font-size: 1.4rem;
+    font-size: 1rem;
     color:blue;
     margin: auto;
     margin-top: 30px;
