--- a/src/components/Navigation/Header.module.css
+++ b/src/components/Navigation/Header.module.css
@@ -1,13 +1,15 @@
 .header{
     width:100vw;
-    height:70px;
+    height:40px;
     background-color: white;
     color:black;
     display: inline-flex;
     align-items: center;
+    position: fixed;
+    top:0;
 }
 .header h1{
- font-size: 2.5rem;
+ font-size: 1.5rem;
  color: rgb(0, 153, 255);
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
@@ -15,5 +17,5 @@
    list-style-type: none; 
    display: flex;
    gap: 40px;
-   font-size: 2rem;
+   font-size: 1.2rem;
 }
