--- a/src/components/Profile.module.css
+++ b/src/components/Profile.module.css
@@ -94,3 +94,21 @@
     background-color: brown;
     cursor: pointer;
 }
+.verify{
+    width:300px;
+    margin: 20px;
+    min-height:100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid gray;
+    border-radius: 5px;
+}
+.verify button{
+    height:25px;
+    margin-left: 10px;
+    border-radius: 5px;
+    background-color: rgb(92, 92, 233);
+    color:white;
+    font-weight: bold;
+}
