--- a/src/components/ForgetPassword.module.css
+++ b/src/components/ForgetPassword.module.css
@@ -41,7 +41,8 @@
 }
 .container input{
     border-radius: 3px;
-    width:300px;
+    width:85%;
+    max-width:300px;
     height:25px;
     font-size: 1rem;
     margin-top: 10px;
