--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -90,6 +90,12 @@
     background-color: rgb(63, 63, 238);
     color:white;
     font-weight: bold;
+    border: none;
+}
+.formContainer button:hover{
+    background-color: rgb(10, 10, 247);
+    cursor: pointer;
+    border:2px solid white;
 }
 .userExpenses{
     min-width: 420px;
@@ -101,6 +107,27 @@
     border:3px groove grey;
     margin-top: 20px;
     padding:10px 0;
+}
+.premium{
+    width: fit-content;
+    margin: auto;
+    margin-top: 30px;
+}
+.premium button{
+    background-color:rgb(202, 84, 206);
+    width:200px;
+    height: 50px;
+    border-radius: 10px;
+    font-size: 1.2rem;
+    font-weight: bold;
+    color:white;
+    border: none;
+    box-shadow: 0 10px 15px violet;
+}
+.premium button:hover{
+    background-color:rgb(242, 20, 250) ;
+    cursor: pointer;
+    border:2px solid white;
 }
 
 
