--- a/src/components/ForgetPassword.module.css
+++ b/src/components/ForgetPassword.module.css
@@ -9,15 +9,17 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    z-index: -1;
+    object-fit: cover;
+    z-index: 10;
 }
 .center{
     width: 700px;
     height: 300px;
     display: flex;
-    border:3px solid grey;
+    border:5px groove grey;
     border-radius: 10px;
-    background-color: black;
+    background-color: rgb(242, 234, 234);
+    z-index: 20;
 
 }
 .center img{
@@ -34,7 +36,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    color:white;
+    color:black;
 }
 .container label{
     font-size: 0.8rem;
@@ -66,6 +68,80 @@
     margin-top: 5px;
 }
 .container a:hover{
+    cursor: pointer;
+    color: blue;
+
+}
+
+.darkbackground{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.darkbackimage{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    object-fit: cover;
+    z-index:10;
+}
+.darkcenter{
+    width: 700px;
+    height: 300px;
+    display: flex;
+    border:5px solid rgb(59, 58, 58);
+    border-radius: 10px;
+    background-color: rgb(85, 83, 83);
+    z-index: 20;
+
+}
+.darkcenter img{
+    width: 50%;
+    height: 100%;
+    border-radius: 10px;
+}
+.darkcontainer{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color:white;
+}
+.darkcontainer label{
+    font-size: 0.8rem;
+}
+.darkcontainer input{
+    border-radius: 3px;
+    width:85%;
+    max-width:300px;
+    height:25px;
+    font-size: 1rem;
+    margin-top: 10px;
+}
+.darkcontainer button{
+    width:150px;
+    height:30px;
+    margin-top: 20px;
+    background-color: transparent;
+    color: rgb(81, 81, 227);
+    font-weight: bold;
+    border-radius: 7px;
+    border:3px solid rgb(81, 81, 227);
+}
+.darkcontainer button:hover{
+    background-color: rgb(81, 81, 227);
+    color:white;
+    border:3px solid white;
+}
+.darkcontainer label{
+    margin-top: 5px;
+}
+.darkcontainer a:hover{
     cursor: pointer;
     color: blue;
 
