--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -1,15 +1,19 @@
+.expensesection{
+    width:100%;
+    height: 100%;
+}
 .headline{
-    position: relative;
-    height: 3rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
     border-bottom: 2px solid gray;
 }
 .headline h3{
+    margin: 0;
     margin-left: 50px;
 }
 .profile{
-    position: absolute;
-    right:0;
-    top:0;
     font-size: 1.2rem;
     width:30rem;
     height:fit-content;
@@ -122,12 +126,152 @@
     font-weight: bold;
     color:white;
     border: none;
-    box-shadow: 0 10px 15px violet;
+    box-shadow: 0 5px 15px violet;
 }
 .premium button:hover{
     background-color:rgb(242, 20, 250) ;
     cursor: pointer;
     border:2px solid white;
+}
+.darkheadline{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
+    border-bottom: 2px solid white;
+}
+.darkheadline h3{
+    margin:0;
+    margin-left: 50px;
+    color:white;
+}
+.darkprofile{
+    font-size: 1.2rem;
+    width:30rem;
+    height:fit-content;
+    font-weight: bold;
+    border-radius: 1.2rem;
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color:rgb(167, 167, 167) ;
+    padding: 10px 0;
+}
+.darkprofile a{
+    border:none;
+    background-color: transparent;
+    font-size: 1.2rem;
+    color:blue;
+    font-weight:bold;
+    text-decoration: none;
+    cursor: pointer;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.darkexpenseContainer{
+    width:100%;
+    
+}
+.darkformContainer{
+   width:400px;
+   height:300px;
+   border:3px solid grey;
+   border-radius: 10px;
+   margin:auto;
+   margin-top: 30px;
+   text-align: center;
+   font-size: 1rem;
+   font-weight: bold;
+   background-color: grey;
+   padding-top: 10px;
+}
+.darkamount{
+   display: flex;
+   flex-direction: column;
+}
+.darkamount input,
+.darkdescription input{
+    width:300px;
+    height:25px;
+    text-align: center;
+    margin: auto;
+    border-radius: 10px;
+    border:3px groove grey;
+    font-size: 1rem;
+    margin-bottom: 15px;
+}
+.darkdescription{
+    display: flex;
+    flex-direction: column;
+}
+.darkcategory{
+    display: flex;
+    flex-direction: column;
+}
+.darkcategory select{
+    width:310px;
+    height:32px;
+    text-align: center;
+    margin: auto;
+    border:3px groove grey;
+    border-radius: 10px;
+    font-size: 1rem;
+    margin-bottom: 20px;
+}
+.darkformContainer button{
+    width:150px;
+    height:30px;
+    border-radius: 5px;
+    background-color: rgb(63, 63, 238);
+    color:white;
+    font-weight: bold;
+    border: none;
+}
+.darkformContainer button:hover{
+    background-color: rgb(10, 10, 247);
+    cursor: pointer;
+    border:2px solid white;
+}
+.darkuserExpenses{
+    min-width: 420px;
+    width:70%;
+    background-color: rgb(19, 18, 18);
+    color: white;
+    margin: auto;
+    border-radius: 10px;
+    border:3px groove grey;
+    margin-top: 20px;
+    padding:10px 0;
+}
+.darkpremium{
+    width: fit-content;
+    margin: auto;
+    margin-top: 30px;
+}
+.darkpremium button{
+    background-color:rgb(202, 84, 206);
+    width:200px;
+    height: 50px;
+    border-radius: 10px;
+    font-size: 1.2rem;
+    font-weight: bold;
+    color:white;
+    border: none;
+    box-shadow: 0 5px 15px violet;
+}
+.darkpremium button:hover{
+    background-color:rgb(242, 20, 250) ;
+    cursor: pointer;
+    border:2px solid white;
+}
+.downloadfile{
+    width:fit-content;
+    margin: auto;
+    margin-top: 20px;
+}
+.csvlink{
+    color:blue;
+    font-size: 18px;
+    cursor:pointer;
 }
 
 
