--- a/src/components/Login.module.css
+++ b/src/components/Login.module.css
@@ -28,6 +28,7 @@
 }
 .loginbutton:hover{
     background-color: rgb(0, 255, 255); 
+    cursor: pointer;
 }
 .email{
     font-size: 1.2rem;
@@ -38,8 +39,9 @@
 .password input{
     min-width:120px;
     height:30px;
+    width:90%;
     border-radius: 8px;
-    font-size: 1.2rem;
+    font-size: 15px;
     color:black;
     margin: auto;
     margin-bottom: 20px;
@@ -83,4 +85,96 @@
 }
 .container a:hover{
     color: blue;
+}
+.darkcontainer{
+    width:260px;
+    min-height:300px;
+    border: 5px outset white;
+    border-radius: 10px;
+    background-color:rgb(64, 63, 63);
+    text-align: center;
+    position: absolute;
+    right:20%;
+    bottom:23% ;
+}
+.darkcontainer h2{
+    font-size: 1.2rem;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.darkloginbutton{
+    min-width: 150px;;
+    min-height:35px;
+    border-radius: 10px;
+    font-size: 1.2rem;
+    display: block;
+    margin: auto;
+    background-color: black;
+    color: white;
+    border:none;
+    margin-top: 10px;
+
+}
+.darkloginbutton:hover{
+    background-color: white; 
+    color:black;
+    font-weight: bold;
+    cursor: pointer;
+}
+.darkemail{
+    font-size: 1.2rem;
+    display:grid;
+    gap: 10px;
+}
+.darkemail input,
+.darkpassword input{
+    min-width:120px;
+    width:90%;
+    height:30px;
+    border-radius: 8px;
+    font-size: 15px;
+    color:black;
+    margin: auto;
+    margin-bottom: 20px;
+    border: 3px solid rgb(217, 215, 215);
+}
+.darkpassword{
+    font-size: 1.2rem;
+    display:grid;
+    gap: 10px;
+}
+.darkusertype{
+    width:270px;
+    position: absolute;
+    right:20%;
+    bottom:16%;
+}
+.darkusertype button{
+    min-width:100%;
+    min-height:30px;
+    font-size: 1.1rem;
+    border-radius: 8px;
+    background-color: rgb(225, 234, 213);
+}
+.darkusertype button:hover{
+    background-color: gray;
+    color:white;
+    border:none;
+    cursor:pointer;
+}
+.darkstyle{
+    width:40%;
+    height:60%;
+    position:absolute;
+    right:0;
+    background-color: rgb(34, 31, 31);
+}
+.darkcontainer a{
+    display: block;
+    margin: auto;
+    margin-top: 20px;
+    color:white;
+
+}
+.darkcontainer a:hover{
+    color:wheat;
 }
