--- a/src/components/Pages/Profile.module.css
+++ b/src/components/Pages/Profile.module.css
@@ -46,6 +46,19 @@
     justify-content: center;
     font-size: 20px;
     font-weight: bold;
+    padding-left: 10px;
+}
+.notverified button{
+    background-color: rgb(203, 62, 38);
+    margin-left: 10px;
+    min-width:100px;
+    min-height: 30px;
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    border:3px solid red;
+    border-radius: 5px;
+    margin-right: 10px;
 }
 .contactform{
     display:flex;
@@ -164,7 +177,20 @@
     justify-content: center;
     font-size: 20px;
     color:white;
+    padding-left: 10px;
     font-weight: bold;
+}
+.darknotverified button{
+    background-color: rgb(124, 122, 122);
+    margin-left: 10px;
+    min-width:100px;
+    min-height: 30px;
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    border:3px solid rgb(245, 243, 243);
+    border-radius: 5px;
+    margin-right: 10px;
 }
 .darkcontacts{
     display: flex;
