--- a/src/components/Navigation/Header.module.css
+++ b/src/components/Navigation/Header.module.css
@@ -9,6 +9,7 @@
     top:0;
     z-index: 999;
 }
+
 .darkheader{
     width:100vw;
     height:40px;
@@ -19,6 +20,10 @@
     position: sticky;
     top:0;
     z-index:999;
+}
+.darkheader a{
+    color:white;
+    text-decoration: none;
 }
 .darkheader h1{
     font-size: 1.5rem;
